# aap_campaign_reg

./: .dockerignore  .env.sample  .firebaserc  .gitignore  Dockerfile  README.md  index.html
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9b05f114baa5_initial_schema.py
backend/app/: crud.py  database.py  db.py  main.py  models.py  schemas.py
backend/db_scripts/: refresh_ap_complete_mandals.sql.sql  seed_data.py
docs/: project-spec-v2.md
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE42.md  DEPLOYMENT.md  README.md
frontend/: config.js.sample  db.js  index.html  main.js  manifest.webmanifest  sw.js
