[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Srikanth Tirandas",email = "stirandas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.120.1,<0.121.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "pydantic[email] (>=2.12.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.9.0,<26.0.0)",
    "ruff (>=0.14.2,<0.15.0)",
    "isort (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]
