[tool.poetry]
name = "backend"
version = "0.1.0"
description = "AAP Campaign Registration Backend"
authors = ["Srikanth Tirandas <stirandas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.120.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = {extras = ["email"], version = "^2.12.3"}

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
ruff = "^0.14.2"
isort = "^7.0.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
