[tool.poetry]
name = "backend"
version = "1.0.0"
description = "AAP Campaign Registration Backend"
authors = ["Srikanth Tirandas <stirandas@gmail.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = {extras = ["email"], version = "^2.5.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.29.0"
alembic = "^1.13.0"
python-dotenv = "^1.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.1.0"
isort = "^5.13.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
